# mxfb-menu

./: README.md  meson.build
data/: appearance  menu-mx  menu-mx.xml  meson.build  out-of-sight  settings
debian/: changelog  control  copyright  rules
debs/: mxfb-menu_22.02.01mx.dsc  mxfb-menu_22.02.01mx.tar.xz  mxfb-menu_22.02.01mx_all.deb  mxfb-menu_22.02.01mx_amd64.build  mxfb-menu_22.02.01mx_amd64.buildinfo  mxfb-menu_22.02.01mx_amd64.changes  mxfb-menu_22.02.01mx_armhf.buildinfo  mxfb-menu_22.02.01mx_armhf.changes  mxfb-menu_22.02.01mx_armhf.deb  mxfb-menu_22.03.01mx.dsc  mxfb-menu_22.03.01mx.tar.xz  mxfb-menu_22.03.01mx_armhf.build  mxfb-menu_22.03.01mx_armhf.buildinfo  mxfb-menu_22.03.01mx_armhf.changes  mxfb-menu_22.03.01mx_armhf.deb
po/: LINGUAS  am.po  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  es.po  es_ES.po  fa.po  fi.po  fr.po  fr_BE.po  gl_ES.po  he_IL.po  hi.po  hr.po  id.po  is.po  it.po  ja.po  lt.po  mxfb-menu.pot  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sq.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
src/: meson.build  mxfb-menu-fb-l10n  mxfb-menu-ob-l10n
